EROPSPT-305 - Admin pending register check download (#163)
* EROPSPT-305 - API for getting pending checks for a single ERO

* EROPSPT-NONE - Add a build and push action (#162)

* EROPSPT-305 - Add a limit on admin results

* EROPSPT-305 - Move the place where limit is defined

* EROPSPT-305 - API spec version bump

* EROPSPT-305 - Test fix

* EROPSPT-305: Remove unnecessary mapping annotations

* EROPSPT-305: Upgrade actions/upload-artifact

---------
